# chirag127.github.io

./: .env.example  .gitignore  AGENTS.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _headers  about.html  ads.txt  ar.txt  budget_state.json  contact.html  contractors.html  cookies.html  delete_empty_repos.py  generate_all.py  generate_projects.py  index.html  modify_existing_repositories.py  mp.md  pending_repos.json  privacy.html  prompt_for_tools.md  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  sw.js  terms.html  test_models.py  test_universal.html  voters.html
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  badges.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: daily-factory.yml  deploy-all.yml  deploy-pages.yml  generate-projects.yml  modify-repos.yml
apex_optimizer/: __init__.py  budget_manager.py  cache.py  concurrent_processor.py  core.py  monetization.py  prompts.py  session_manager.py  state_manager.py
apex_optimizer/ai/: base.py
apex_optimizer/clients/: __init__.py  github.py  jules.py  searxng.py
apex_optimizer/trend_discovery/: aggregator.py  arxiv.py  hashnode.py  kaggle.py  news_sources.py  papers_with_code.py  reddit.py  selector.py  semantic_scholar.py
apex_optimizer/utils/: __init__.py
config/: ar.txt  services.json
docs/: AGENTS.md  PROMPTS.md  REPOSITORY_REVIEW.md  TASK_LIST.md
multiverse_sites/deepseek-r1-huge--github/: index.html
polymorphs/: deepseek-r1t2-chimera-openrouter.html  deepseek-v3-2-nvidia.html  glm-4-7-1t-moe-cerebras.html  mistral-large-3-675b-instruct-mistral.html  mistral-large-3-675b-instruct-nvidia.html  qwen3-coder-480b-moe-openrouter.html
scripts/: build_universal_config.py  delete_empty_repos.py  fix_integrations.py  generate_complete_site.py  generate_multiverse_hub.py  generate_polymorphs_hub.py  generate_projects.py  generate_sitemap.py  generate_sitemap_simple.py  get_repos_info.py  modify_existing_repositories.py  multi_platform_deploy.py  multiverse_tools.py  polymorphs_tools.py  pr_batch_closer.py  pr_batch_merger.py  sitemap.xml  update_universal_models.py  upload_secrets.py  verify_ai_imports.py  verify_all.py  verify_baas_syntax.js  verify_imports.py
shared/: analytics.js  footer.html  header.html  integrations.js  monetization.js  profile.json  tool-template.html
src/: prompts.py  repository_factory.py  session_orchestrator.py
src/ai/: base.py  (+7 more)
state/: tools_generated.json
templates/: satellite_tool.html
tests/: test_budget_manager.py  test_deduplication.py  test_trend_discovery.py
universal/: base-url.js  config.js  core.js  firebase-modules.js  index.js  sidebar.js  style.css
(+429 files in other folders)
