[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chirag127-github-io"
version = "1.0.0"
description = "Tool Website Generator and Repository Management"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "tiktoken>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]
